# avda

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.py  tox.ini
avda/: cli.py  jellyfin_to_notion.py  retidy.py  subtitle_mover.py  video.py
avda/helper/: __init__.py  avid.py  nfo.py
tests/: test_avda.py  test_helper.py  test_retidy.py  test_subtitle_mover.py
