[tool.poetry]
name = "avda"
version = "0.1.0"
description = ""
authors = ["WayJam So <imsuwj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
click = "^8.1.7"
lxml = "^4.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
